Separated CSS Styles

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link href="/style.css" rel="stylesheet">
+
   <!--Font Awesome-->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <!--Google Font---->
@@ -27,28 +30,6 @@
   <title>Paul Walker</title>
 
 </head>
-<style>
-  body {
-
-    padding: 1%;
-    margin: 2%;
-    font-family: 'PT Sans Narrow', sans-serif;
-  }
-
-  .KBPquotes {
-    padding: 2%;
-    margin: 2%;
-  }
-
-  .fa {
-    font-size: 50px;
-  }
-
-  br {
-    display: block;
-    margin: 1%;
-  }
-</style>
 
 <body>
   <div class="container">
